# log_highlighter_gui_cpp

./: .gitignore  .gitmodules  LICENSE  README.md
LogHighlighter/: CMakeLists.txt
LogHighlighter/LogHighlighter/: App.cpp  App.h  App.hpp  main.cpp  rules.config
LogHighlighter/LogHighlighter.xcodeproj/: project.pbxproj
LogHighlighter/LogHighlighter.xcodeproj/xcshareddata/xcschemes/: LogHighlighter.xcscheme
LogHighlighter/LogHighlighter/ui/: LogWindow.cpp  LogWindow.h  LogWindow.hpp
LogHighlighter/LogHighlighter/utils/: FileManagement.cpp  FileManagement.hpp  TimerBenchmark.h  TimerBenchmark.hpp
